--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -2,40 +2,39 @@
   "creativetab.veggiesdelight_tab": "Delicia Vegetal",
 
   "item.veggiesdelight.bellpepper": "Pimiento",
-  "item.veggiesdelight.broccoli": "Broccoli",
+  "item.veggiesdelight.broccoli": "Brócoli",
   "item.veggiesdelight.cauliflower": "Coliflor",
   "item.veggiesdelight.dandelion_leaf": "Hoja de Diente de León",
   "item.veggiesdelight.garlic": "Ajo",
   "item.veggiesdelight.sweet_potato": "Batata",
-  "item.veggiesdelight.turnip": "Turnip",
-  "item.veggiesdelight.zucchini": "Zucchini",
+  "item.veggiesdelight.turnip": "Nabo",
+  "item.veggiesdelight.zucchini": "Calabacín",
 
   "item.veggiesdelight.bellpepper_seeds": "Semillas de Pimiento",
-  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
-  "item.veggiesdelight.cauliflower_seeds": "Semillas de Coliflor",
-  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
-  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
+  "item.veggiesdelight.broccoli_seeds": "Semillas de Brócoli",
+  "item.veggiesdelight.cauliflower_seeds":"Semillas de Coliflor",
+  "item.veggiesdelight.turnip_seeds": "Semillas de Nabo",
+  "item.veggiesdelight.zucchini_seeds": "Semillas de Calabacín",
 
   "block.veggiesdelight.bellpepper_crate": "Cajón de Pimientos",
-  "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
+  "block.veggiesdelight.broccoli_crate": "Cajón de Brócoli",
   "block.veggiesdelight.cauliflower_crate": "Cajón de Coliflor",
   "block.veggiesdelight.garlic_crate": "Cajón de Ajo",
-  "block.veggiesdelight.sweet_potato_crate": "Cajón de Batata",
-  "block.veggiesdelight.turnip_crate": "Turnip Crate",
-  "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
+  "block.veggiesdelight.sweet_potato_crate": "Cajón de Batatas",
+  "block.veggiesdelight.turnip_crate": "Cajón de Nabos",
+  "block.veggiesdelight.zucchini_crate": "Cajón de Calabacines",
 
-  "block.veggiesdelight.wild_bellpeppers": "Pimientos silvestre",
-  "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
-  "block.veggiesdelight.wild_cauliflowers": "Coliflores silvestre",
-  "block.veggiesdelight.wild_garlic": "Ajo silvestre",
-  "block.veggiesdelight.wild_sweet_potatoes": "Batatas silvestre",
-  "block.veggiesdelight.wild_turnips": "Wild Turnips",
-  "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+  "block.veggiesdelight.wild_bellpeppers": "Pimientos Silvestres",
+  "block.veggiesdelight.wild_broccoli": "Brócoli Silvestre",
+  "block.veggiesdelight.wild_cauliflowers": "Coliflores Silvestres",
+  "block.veggiesdelight.wild_garlic": "Ajo Silvestre",
+  "block.veggiesdelight.wild_sweet_potatoes": "Batatas Silvestres",
+  "block.veggiesdelight.wild_turnips": "Nabos Silvestres",
+  "block.veggiesdelight.wild_zucchinis": "Calabacines Silvestres",
   "block.veggiesdelight.mature_dandelion": "Diente de León Maduro",
 
-
-  "item.veggiesdelight.cacciatore": "Cazador",
-  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
+  "item.veggiesdelight.cacciatore": "Cacciatore",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Wrap de Fajitas de Pollo",
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.shakshouka": "Shakshouka",
   "item.veggiesdelight.smoked_bellpepper": "Pimiento Ahumado",
@@ -44,16 +43,20 @@
   "block.veggiesdelight.vegan_pizza": "Pizza Vegana",
   "item.veggiesdelight.vegan_pizza_slice": "Porción de Pizza Vegana",
 
-  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
+  "item.veggiesdelight.broccoli_salad": "Ensalada de Brócoli",
+  "item.veggiesdelight.broccoli_soup": "Sopa de Brócoli",
+  "item.veggiesdelight.pasta_with_broccoli": "Pasta con Brócoli",
+
+  "item.veggiesdelight.cauliflower_bread": "Pan de Coliflor",
   "item.veggiesdelight.cauliflower_burger": "Hamburguesa de Coliflor",
   "item.veggiesdelight.cauliflower_floret": "Ramillete de Coliflor",
-  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
-  "item.veggiesdelight.cauliflower_patty": "Hamburguesa de Coliflor",
+  "item.veggiesdelight.cauliflower_kuku": "Kuku de Coliflor",
+  "item.veggiesdelight.cauliflower_patty": "Tortita de Coliflor",
   "item.veggiesdelight.cauliflower_soup": "Sopa de Coliflor",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Hamburguesa de Coliflor Cocida",
+  "item.veggiesdelight.cooked_cauliflower_patty": "Tortita de Coliflor Cocida",
   "item.veggiesdelight.fried_cauliflower_floret": "Ramillete de Coliflor Frito",
 
-  "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
+  "item.veggiesdelight.dandelion_and_eggs": "Verduras de Diente de León con Huevos",
   "item.veggiesdelight.dandelion_juice": "Zumo de Diente de León",
 
   "item.veggiesdelight.cesar_salad": "Ensalada César",
@@ -63,73 +66,67 @@
   "item.veggiesdelight.garlic_chicken_stew": "Estofado de Pollo con Ajo",
   "item.veggiesdelight.garlic_clove": "Diente de Ajo",
   "item.veggiesdelight.garlic_rice_with_cauliflower": "Arroz con Ajo y Coliflor",
-  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Champiñones Rellenos de Ajo",
   "item.veggiesdelight.roasted_garlic_clove": "Diente de Ajo Asado",
 
   "item.veggiesdelight.baked_sweet_potato": "Batata Horneada",
   "item.veggiesdelight.mashed_potatoes": "Puré de Patatas",
   "item.veggiesdelight.potato_noodle": "Fideo de Patata",
   "item.veggiesdelight.potato_noodles": "Fideos de Patata",
-  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
-  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
+  "item.veggiesdelight.sweet_potato_cupcake": "Magdalena de Batata",
+  "item.veggiesdelight.sweet_potato_dough": "Masa de Batata",
+  "item.veggiesdelight.sweet_potato_pancakes": "Panqueques de Batata",
   "item.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
   "item.veggiesdelight.sweet_potato_pie_slice": "Porción de Tarta de Batata",
 
+  "item.veggiesdelight.turnip_beef_stew": "Estofado de Ternera con Nabo",
+  "item.veggiesdelight.turnip_cake": "Pastel de Nabo",
+  "item.veggiesdelight.turnip_salad": "Ensalada de Nabo",
+  "item.veggiesdelight.turnip_water": "Agua de Nabo",
+
+  "item.veggiesdelight.roasted_zucchini": "Calabacín Asado",
+  "item.veggiesdelight.zucchini_sandwich": "Sándwich de Calabacín",
+  "item.veggiesdelight.zucchini_slice": "Rodaja de Calabacín",
+  "item.veggiesdelight.stuffed_zucchinis": "Calabacines Rellenos",
+
   "item.veggiesdelight.beetroot_brownie": "Brownie de Remolacha",
   "block.veggiesdelight.beetroot_brownie_tray": "Bandeja de Brownie de Remolacha",
-  "block.veggiesdelight.carrot_cake": "Carrot Cake",
-  "item.veggiesdelight.carrot_cake_slice": "Zumo de Zanahoria",
+  "block.veggiesdelight.carrot_cake": "Pastel de Zanahoria",
+  "item.veggiesdelight.carrot_cake_slice": "Porción de Pastel de Zanahoria",
   "item.veggiesdelight.carrot_juice": "Zumo de Zanahoria",
-  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
-  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
-
+  "item.veggiesdelight.fish_and_chips": "Pescado con Papas Fritas",
+  "item.veggiesdelight.roasted_vegetables": "Verduras Asadas",
 
   "veggiesdelight.advancement.root": "Delicia Vegetal",
   "veggiesdelight.advancement.root.desc": "¡Ve a por tus verduras!",
 
-  "veggiesdelight.advancement.fruit": "¿Esto no es una fruta?",
-  "veggiesdelight.advancement.fruit.desc": "un impostor entre nosotros",
+  "veggiesdelight.advancement.r_first_veggie": "Que Empiece la Fiesta",
+  "veggiesdelight.advancement.r_first_veggie.desc": "Recoge tu primera verdura",
 
-  "veggiesdelight.advancement.first": "Empecemos",
-  "veggiesdelight.advancement.first.desc": "Recoge tu primera verdura",
+  "veggiesdelight.advancement.r_fruit_veggie": "¿No es esto una fruta?",
+  "veggiesdelight.advancement.r_fruit_veggie.desc": "Un impostor entre nosotros",
 
-  "veggiesdelight.advancement.all": "¡Atrápalos Ya!",
-  "veggiesdelight.advancement.all.desc": "Recoge todas las verduras",
+  "veggiesdelight.advancement.r_all_veggies": "¡Atrápalos Todos!",
+  "veggiesdelight.advancement.r_all_veggies.desc": "Recoge todas las verduras nuevas",
 
-  "veggiesdelight.advancement.eat": "Es crudo pero comestible",
-  "veggiesdelight.advancement.eat.desc": "Come cualquier verdura cruda",
+  "veggiesdelight.advancement.vd_bellpepper_master": "Dr. Pimiento",
+  "veggiesdelight.advancement.vd_bellpepper_master.desc": "Prepara todos los platos posibles con pimientos",
 
-  "veggiesdelight.advancement.pizza_time": "¡Es hora de pizza!",
-  "veggiesdelight.advancement.pizza_time.desc": "Haz tu primera Pizza Vegana",
+  "veggiesdelight.advancement.vd_broccoli_master": "Jefe del Brócoli",
+  "veggiesdelight.advancement.vd_broccoli_master.desc": "Prepara todos los platos posibles con brócoli",
 
-  "veggiesdelight.advancement.burger": "Hamburguesa floreciente",
-  "veggiesdelight.advancement.burger.desc": "Haz una hamburguesa de coliflor",
+  "veggiesdelight.advancement.vd_cauliflower_master": "Maestro de la Coliflor",
+  "veggiesdelight.advancement.vd_cauliflower_master.desc": "Prepara todos los platos posibles con coliflor",
 
-  "veggiesdelight.advancement.cauliflower": "La forma vegana",
-  "veggiesdelight.advancement.cauliflower.desc": "Fríe un ramillete de coliflor, el pollo frito vegano",
+  "veggiesdelight.advancement.vd_garlic_master": "Ajo Jr.",
+  "veggiesdelight.advancement.vd_garlic_master.desc": "Prepara todos los platos posibles con ajo",
 
-  "veggiesdelight.advancement.cupcake": "Cupcake",
-  "veggiesdelight.advancement.cupcake.desc": "Make a cupcake out of sweet potatoes",
+  "veggiesdelight.advancement.vd_sweet_potato_master": "Dulce Victoria",
+  "veggiesdelight.advancement.vd_sweet_potato_master.desc": "Prepara todos los platos posibles con batatas",
 
-  "veggiesdelight.advancement.pie": "Porción de vida",
-  "veggiesdelight.advancement.pie.desc": "Hornea una tarta de batata",
+  "veggiesdelight.advancement.vd_turnip_master": "Hora del Nabo",
+  "veggiesdelight.advancement.vd_turnip_master.desc": "Prepara todos los platos posibles con nabos",
 
-  "veggiesdelight.advancement.med": "Remedio natural",
-  "veggiesdelight.advancement.med.desc": "Prepara miel de ajo fermentada",
-
-  "veggiesdelight.advancement.cesar": "¡CESAAAAAAR!",
-  "veggiesdelight.advancement.cesar.desc": "Prepara una ensalada César",
-
-  "veggiesdelight.advancement.bellpepper_master": "Dr. Pimiento",
-  "veggiesdelight.advancement.bellpepper_master.desc": "Prepara todos los platos posibles con pimientos",
-
-  "veggiesdelight.advancement.cauliflower_master": "Maestro de la Coliflor",
-  "veggiesdelight.advancement.cauliflower_master.desc": "Prepara todos los platos posibles con coliflor",
-
-  "veggiesdelight.advancement.sweet_potato_master": "Chef Dulce",
-  "veggiesdelight.advancement.sweet_potato_master.desc": "Prepara todos los platos posibles con batatas",
-
-  "veggiesdelight.advancement.garlic_master": "Ajo Jr.",
-  "veggiesdelight.advancement.garlic_master.desc": "Prepara todos los platos posibles con ajo"
+  "veggiesdelight.advancement.vd_zucchini_master": "Cima del Calabacín",
+  "veggiesdelight.advancement.vd_zucchini_master.desc": "Prepara todos los platos posibles con calabacines"
 }
