--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -2,35 +2,35 @@
     "creativetab.veggiesdelight_tab": "蔬菜乐事",
 
     "item.veggiesdelight.bellpepper": "甜椒",
-    "item.veggiesdelight.broccoli": "Broccoli",
+    "item.veggiesdelight.broccoli": "???",
     "item.veggiesdelight.cauliflower": "花椰菜",
     "item.veggiesdelight.dandelion_leaf": "蒲公英叶",
     "item.veggiesdelight.garlic": "大蒜",
     "item.veggiesdelight.sweet_potato": "红薯",
-    "item.veggiesdelight.turnip": "Turnip",
-    "item.veggiesdelight.zucchini": "Zucchini",
+    "item.veggiesdelight.turnip": "???",
+    "item.veggiesdelight.zucchini": "???",
 
     "item.veggiesdelight.bellpepper_seeds": "甜椒种子",
-    "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
+    "item.veggiesdelight.broccoli_seeds": "???",
     "item.veggiesdelight.cauliflower_seeds": "花椰菜种子",
-    "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
-    "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
+    "item.veggiesdelight.turnip_seeds": "???",
+    "item.veggiesdelight.zucchini_seeds": "???",
 
     "block.veggiesdelight.bellpepper_crate": "箱装甜椒",
-    "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
+    "block.veggiesdelight.broccoli_crate": "???",
     "block.veggiesdelight.cauliflower_crate": "箱装花椰菜",
     "block.veggiesdelight.garlic_crate": "箱装大蒜",
     "block.veggiesdelight.sweet_potato_crate": "箱装红薯",
-    "block.veggiesdelight.turnip_crate": "Turnip Crate",
-    "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
+    "block.veggiesdelight.turnip_crate": "???",
+    "block.veggiesdelight.zucchini_crate": "???",
 
     "block.veggiesdelight.wild_bellpeppers": "野生甜椒丛",
-    "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
+    "block.veggiesdelight.wild_broccoli": "???",
     "block.veggiesdelight.wild_cauliflowers": "野生花椰菜丛",
     "block.veggiesdelight.wild_garlic": "野生大蒜",
     "block.veggiesdelight.wild_sweet_potatoes": "野生红薯",
-    "block.veggiesdelight.wild_turnips": "Wild Turnips",
-    "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
+    "block.veggiesdelight.wild_turnips": "???",
+    "block.veggiesdelight.wild_zucchinis": "???",
     "block.veggiesdelight.mature_dandelion": "成熟蒲公英",
 
 
@@ -44,10 +44,14 @@
     "block.veggiesdelight.vegan_pizza": "纯素披萨",
     "item.veggiesdelight.vegan_pizza_slice": "纯素披萨切片",
 
+    "item.veggiesdelight.broccoli_salad": "???",
+    "item.veggiesdelight.broccoli_soup": "???",
+    "item.veggiesdelight.pasta_with_broccoli": "???",
+
     "item.veggiesdelight.cauliflower_bread": "花椰菜面包",
     "item.veggiesdelight.cauliflower_burger": "花椰菜汉堡",
     "item.veggiesdelight.cauliflower_floret": "花椰菜花球",
-    "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
+    "item.veggiesdelight.cauliflower_kuku": "???",
     "item.veggiesdelight.cauliflower_patty": "生花椰菜蛋饼",
     "item.veggiesdelight.cauliflower_soup": "花椰菜奶油浓汤",
     "item.veggiesdelight.cooked_cauliflower_patty": "熟花椰菜蛋饼",
@@ -72,9 +76,19 @@
     "item.veggiesdelight.potato_noodles": "煮粉条",
     "item.veggiesdelight.sweet_potato_cupcake": "红薯纸杯蛋糕",
     "item.veggiesdelight.sweet_potato_dough": "红薯面团",
-    "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
-    "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+    "item.veggiesdelight.sweet_potato_pancakes": "???",
+    "item.veggiesdelight.sweet_potato_pie": "???",
     "item.veggiesdelight.sweet_potato_pie_slice": "红薯派切片",
+
+    "item.veggiesdelight.turnip_beef_stew": "???",
+    "item.veggiesdelight.turnip_cake": "???",
+    "item.veggiesdelight.turnip_salad": "???",
+    "item.veggiesdelight.turnip_water": "???",
+
+    "item.veggiesdelight.roasted_zucchini": "???",
+    "item.veggiesdelight.zucchini_sandwich": "???",
+    "item.veggiesdelight.zucchini_slice": "???",
+    "item.veggiesdelight.stuffed_zucchinis": "???",
 
     "item.veggiesdelight.beetroot_brownie": "甜菜根布朗尼切片",
     "block.veggiesdelight.beetroot_brownie_tray": "甜菜根布朗尼",
@@ -88,48 +102,33 @@
     "veggiesdelight.advancement.root": "蔬菜乐事",
     "veggiesdelight.advancement.root.desc": "快去获取你的蔬菜吧！",
 
-    "veggiesdelight.advancement.fruit": "这不是水果吗？",
-    "veggiesdelight.advancement.fruit.desc": "我们中出了一个叛徒",
+    "veggiesdelight.advancement.r_first_veggie": "素来如此",
+    "veggiesdelight.advancement.r_first_veggie.desc": "收获你的第一份蔬菜",
 
-    "veggiesdelight.advancement.first": "素来如此",
-    "veggiesdelight.advancement.first.desc": "收获你的第一份蔬菜",
+    "veggiesdelight.advancement.r_fruit_veggie": "这不是水果吗？",
+    "veggiesdelight.advancement.r_fruit_veggie.desc": "我们中出了一个叛徒",
 
-    "veggiesdelight.advancement.all": "把他们全收集！",
-    "veggiesdelight.advancement.all.desc": "集齐所有种类的蔬菜",
+    "veggiesdelight.advancement.r_all_veggies": "把他们全收集！",
+    "veggiesdelight.advancement.r_all_veggies.desc": "集齐所有种类的蔬菜",
 
-    "veggiesdelight.advancement.eat": "虽然是生的，但也能吃",
-    "veggiesdelight.advancement.eat.desc": "生吃任意一种蔬菜",
+    "veggiesdelight.advancement.r_bellpepper_master": "胡椒博士",
+    "veggiesdelight.advancement.r_bellpepper_master.desc": "制作所有需要甜椒的菜",
 
-    "veggiesdelight.advancement.pizza_time": "披萨时间到！",
-    "veggiesdelight.advancement.pizza_time.desc": "制作你的第一份纯素披萨",
+    "veggiesdelight.advancement.vd_broccoli_master": "???",
+    "veggiesdelight.advancement.vd_broccoli_master.desc": "???",
 
-    "veggiesdelight.advancement.burger": "汉堡开花",
-    "veggiesdelight.advancement.burger.desc": "制作一份花椰菜汉堡",
+    "veggiesdelight.advancement.r_cauliflower_master": "花椰菜大师",
+    "veggiesdelight.advancement.r_cauliflower_master.desc": "制作所有需要花椰菜的菜",
 
-    "veggiesdelight.advancement.cauliflower": "我传送过面包！",
-    "veggiesdelight.advancement.cauliflower.desc": "制作一份花椰菜面包",
+    "veggiesdelight.advancement.r_garlic_master": "卡里克二世",
+    "veggiesdelight.advancement.r_garlic_master.desc": "制作所有需要大蒜的菜",
 
-    "veggiesdelight.advancement.cupcake": "为糕而来",
-    "veggiesdelight.advancement.cupcake.desc": "制作一份红薯纸杯蛋糕",
+    "veggiesdelight.advancement.r_sweet_potato_master": "红薯主厨",
+    "veggiesdelight.advancement.r_sweet_potato_master.desc": "制作所有需要红薯的菜",
 
-    "veggiesdelight.advancement.pie": "人生一派",
-    "veggiesdelight.advancement.pie.desc": "烘焙一份红薯派",
+    "veggiesdelight.advancement.vd_turnip_master": "???",
+    "veggiesdelight.advancement.vd_turnip_master.desc": "???",
 
-    "veggiesdelight.advancement.med": "自然疗法",
-    "veggiesdelight.advancement.med.desc": "制作一瓶发酵蒜蜜",
-
-    "veggiesdelight.advancement.cesar": "西撒————！",
-    "veggiesdelight.advancement.cesar.desc": "制作一份凯撒沙拉",
-
-    "veggiesdelight.advancement.bellpepper_master": "胡椒博士",
-    "veggiesdelight.advancement.bellpepper_master.desc": "制作所有需要甜椒的菜",
-
-    "veggiesdelight.advancement.cauliflower_master": "花椰菜大师",
-    "veggiesdelight.advancement.cauliflower_master.desc": "制作所有需要花椰菜的菜",
-
-    "veggiesdelight.advancement.sweet_potato_master": "红薯主厨",
-    "veggiesdelight.advancement.sweet_potato_master.desc": "制作所有需要红薯的菜",
-
-    "veggiesdelight.advancement.garlic_master": "卡里克二世",
-    "veggiesdelight.advancement.garlic_master.desc": "制作所有需要大蒜的菜"
+    "veggiesdelight.advancement.vd_zucchini_master": "???",
+    "veggiesdelight.advancement.vd_zucchini_master.desc": "???"
 }
