Switched "item" with "block" for pie

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -77,7 +77,7 @@
   "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
   "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
   "item.veggiesdelight.sweet_potato_pancakes": "Sweet Potato Pancakes",
-  "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+  "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
 
   "item.veggiesdelight.turnip_beef_stew": "Turnip Beef Stew",
