--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -76,7 +76,7 @@
   "item.veggiesdelight.sweet_potato_cupcake": "Magdalena de Batata",
   "item.veggiesdelight.sweet_potato_dough": "Masa de Batata",
   "item.veggiesdelight.sweet_potato_pancakes": "Panqueques de Batata",
-  "item.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
+  "block.veggiesdelight.sweet_potato_pie": "Tarta de Batata",
   "item.veggiesdelight.sweet_potato_pie_slice": "Porción de Tarta de Batata",
 
   "item.veggiesdelight.turnip_beef_stew": "Estofado de Ternera con Nabo",
