--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -77,7 +77,7 @@
     "item.veggiesdelight.sweet_potato_cupcake": "红薯纸杯蛋糕",
     "item.veggiesdelight.sweet_potato_dough": "红薯面团",
     "item.veggiesdelight.sweet_potato_pancakes": "???",
-    "item.veggiesdelight.sweet_potato_pie": "???",
+    "block.veggiesdelight.sweet_potato_pie": "???",
     "item.veggiesdelight.sweet_potato_pie_slice": "红薯派切片",
 
     "item.veggiesdelight.turnip_beef_stew": "???",
