--- a/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
@@ -77,7 +77,7 @@
   "item.veggiesdelight.sweet_potato_cupcake": "さつまいものカップケーキ",
   "item.veggiesdelight.sweet_potato_dough": "サツマイモ生地",
   "item.veggiesdelight.sweet_potato_pancakes": "???",
-  "item.veggiesdelight.sweet_potato_pie": "???",
+  "block.veggiesdelight.sweet_potato_pie": "???",
   "item.veggiesdelight.sweet_potato_pie_slice": "一切れのさつまいもパイ",
 
   "item.veggiesdelight.turnip_beef_stew": "???",
