--- a/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
@@ -77,7 +77,7 @@
   "item.veggiesdelight.sweet_potato_cupcake": "Кекс из батата",
   "item.veggiesdelight.sweet_potato_dough": "Тесто из батата",
   "item.veggiesdelight.sweet_potato_pancakes": "???",
-  "item.veggiesdelight.sweet_potato_pie": "???",
+  "block.veggiesdelight.sweet_potato_pie": "???",
   "item.veggiesdelight.sweet_potato_pie_slice": "Кусочек пирога с бататом",
 
   "item.veggiesdelight.turnip_beef_stew": "???",
