--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -2,37 +2,36 @@
     "creativetab.veggiesdelight_tab": "蔬菜乐事",
 
     "item.veggiesdelight.bellpepper": "甜椒",
-    "item.veggiesdelight.broccoli": "???",
+    "item.veggiesdelight.broccoli": "西兰花",
     "item.veggiesdelight.cauliflower": "花椰菜",
     "item.veggiesdelight.dandelion_leaf": "蒲公英叶",
     "item.veggiesdelight.garlic": "大蒜",
     "item.veggiesdelight.sweet_potato": "红薯",
-    "item.veggiesdelight.turnip": "???",
-    "item.veggiesdelight.zucchini": "???",
+    "item.veggiesdelight.turnip": "芜菁",
+    "item.veggiesdelight.zucchini": "西葫芦",
 
     "item.veggiesdelight.bellpepper_seeds": "甜椒种子",
-    "item.veggiesdelight.broccoli_seeds": "???",
+    "item.veggiesdelight.broccoli_seeds": "西兰花种子",
     "item.veggiesdelight.cauliflower_seeds": "花椰菜种子",
-    "item.veggiesdelight.turnip_seeds": "???",
-    "item.veggiesdelight.zucchini_seeds": "???",
+    "item.veggiesdelight.turnip_seeds": "芜菁种子",
+    "item.veggiesdelight.zucchini_seeds": "西葫芦种子",
 
     "block.veggiesdelight.bellpepper_crate": "箱装甜椒",
-    "block.veggiesdelight.broccoli_crate": "???",
+    "block.veggiesdelight.broccoli_crate": "箱装西兰花",
     "block.veggiesdelight.cauliflower_crate": "箱装花椰菜",
     "block.veggiesdelight.garlic_crate": "箱装大蒜",
     "block.veggiesdelight.sweet_potato_crate": "箱装红薯",
-    "block.veggiesdelight.turnip_crate": "???",
-    "block.veggiesdelight.zucchini_crate": "???",
+    "block.veggiesdelight.turnip_crate": "箱装芜菁",
+    "block.veggiesdelight.zucchini_crate": "箱装西葫芦",
 
     "block.veggiesdelight.wild_bellpeppers": "野生甜椒丛",
-    "block.veggiesdelight.wild_broccoli": "???",
+    "block.veggiesdelight.wild_broccoli": "野生西兰花",
     "block.veggiesdelight.wild_cauliflowers": "野生花椰菜丛",
     "block.veggiesdelight.wild_garlic": "野生大蒜",
     "block.veggiesdelight.wild_sweet_potatoes": "野生红薯",
-    "block.veggiesdelight.wild_turnips": "???",
-    "block.veggiesdelight.wild_zucchinis": "???",
+    "block.veggiesdelight.wild_turnips": "野生芜菁",
+    "block.veggiesdelight.wild_zucchinis": "野生西葫芦",
     "block.veggiesdelight.mature_dandelion": "成熟蒲公英",
-
 
     "item.veggiesdelight.cacciatore": "猎人炖菜",
     "item.veggiesdelight.chicken_fajitas_wrap": "墨西哥烤鸡肉卷",
@@ -44,14 +43,14 @@
     "block.veggiesdelight.vegan_pizza": "纯素披萨",
     "item.veggiesdelight.vegan_pizza_slice": "纯素披萨切片",
 
-    "item.veggiesdelight.broccoli_salad": "???",
-    "item.veggiesdelight.broccoli_soup": "???",
-    "item.veggiesdelight.pasta_with_broccoli": "???",
+    "item.veggiesdelight.broccoli_salad": "西兰花沙拉",
+    "item.veggiesdelight.broccoli_soup": "奶油西兰花浓汤",
+    "item.veggiesdelight.pasta_with_broccoli": "西兰花意面",
 
     "item.veggiesdelight.cauliflower_bread": "花椰菜面包",
     "item.veggiesdelight.cauliflower_burger": "花椰菜汉堡",
     "item.veggiesdelight.cauliflower_floret": "花椰菜花球",
-    "item.veggiesdelight.cauliflower_kuku": "???",
+    "item.veggiesdelight.cauliflower_kuku": "波斯花椰菜蛋饼",
     "item.veggiesdelight.cauliflower_patty": "生花椰菜蛋饼",
     "item.veggiesdelight.cauliflower_soup": "花椰菜奶油浓汤",
     "item.veggiesdelight.cooked_cauliflower_patty": "熟花椰菜蛋饼",
@@ -76,19 +75,19 @@
     "item.veggiesdelight.potato_noodles": "煮粉条",
     "item.veggiesdelight.sweet_potato_cupcake": "红薯纸杯蛋糕",
     "item.veggiesdelight.sweet_potato_dough": "红薯面团",
-    "item.veggiesdelight.sweet_potato_pancakes": "???",
-    "block.veggiesdelight.sweet_potato_pie": "???",
+    "item.veggiesdelight.sweet_potato_pancakes": "红薯煎饼",
+    "block.veggiesdelight.sweet_potato_pie": "红薯派",
     "item.veggiesdelight.sweet_potato_pie_slice": "红薯派切片",
 
-    "item.veggiesdelight.turnip_beef_stew": "???",
-    "item.veggiesdelight.turnip_cake": "???",
-    "item.veggiesdelight.turnip_salad": "???",
-    "item.veggiesdelight.turnip_water": "???",
+    "item.veggiesdelight.turnip_beef_stew": "芜菁炖牛肉",
+    "item.veggiesdelight.turnip_cake": "芜菁糕",
+    "item.veggiesdelight.turnip_salad": "芜菁沙拉",
+    "item.veggiesdelight.turnip_water": "芜菁汁",
 
-    "item.veggiesdelight.roasted_zucchini": "???",
-    "item.veggiesdelight.zucchini_sandwich": "???",
-    "item.veggiesdelight.zucchini_slice": "???",
-    "item.veggiesdelight.stuffed_zucchinis": "???",
+    "item.veggiesdelight.roasted_zucchini": "烤西葫芦",
+    "item.veggiesdelight.zucchini_sandwich": "西葫芦三明治",
+    "item.veggiesdelight.zucchini_slice": "西葫芦片",
+    "item.veggiesdelight.stuffed_zucchinis": "酿西葫芦",
 
     "item.veggiesdelight.beetroot_brownie": "甜菜根布朗尼切片",
     "block.veggiesdelight.beetroot_brownie_tray": "甜菜根布朗尼",
@@ -97,7 +96,6 @@
     "item.veggiesdelight.carrot_juice": "胡萝卜汁",
     "item.veggiesdelight.fish_and_chips": "炸鱼薯条",
     "item.veggiesdelight.roasted_vegetables": "烤菜拼盘",
-
 
     "veggiesdelight.advancement.root": "蔬菜乐事",
     "veggiesdelight.advancement.root.desc": "快去获取你的蔬菜吧！",
@@ -114,8 +112,8 @@
     "veggiesdelight.advancement.r_bellpepper_master": "胡椒博士",
     "veggiesdelight.advancement.r_bellpepper_master.desc": "制作所有需要甜椒的菜",
 
-    "veggiesdelight.advancement.vd_broccoli_master": "???",
-    "veggiesdelight.advancement.vd_broccoli_master.desc": "???",
+    "veggiesdelight.advancement.vd_broccoli_master": "西兰花大厨",
+    "veggiesdelight.advancement.vd_broccoli_master.desc": "制作所有需要西兰花的菜",
 
     "veggiesdelight.advancement.r_cauliflower_master": "花椰菜大师",
     "veggiesdelight.advancement.r_cauliflower_master.desc": "制作所有需要花椰菜的菜",
@@ -126,9 +124,9 @@
     "veggiesdelight.advancement.r_sweet_potato_master": "红薯主厨",
     "veggiesdelight.advancement.r_sweet_potato_master.desc": "制作所有需要红薯的菜",
 
-    "veggiesdelight.advancement.vd_turnip_master": "???",
-    "veggiesdelight.advancement.vd_turnip_master.desc": "???",
+    "veggiesdelight.advancement.vd_turnip_master": "芜菁料理王",
+    "veggiesdelight.advancement.vd_turnip_master.desc": "制作所有需要芜菁的菜",
 
-    "veggiesdelight.advancement.vd_zucchini_master": "???",
-    "veggiesdelight.advancement.vd_zucchini_master.desc": "???"
+    "veggiesdelight.advancement.vd_zucchini_master": "西葫芦达人",
+    "veggiesdelight.advancement.vd_zucchini_master.desc": "制作所有需要西葫芦的菜"
 }
