--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -93,7 +93,7 @@
   "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
   "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
   "block.veggiesdelight.carrot_cake": "Carrot Cake",
-  "item.veggiesdelight.carrot_cake_slice": "Carrot Cake",
+  "item.veggiesdelight.carrot_cake_slice": "Carrot Cake Slice",
   "item.veggiesdelight.carrot_juice": "Carrot Juice",
   "item.veggiesdelight.fish_and_chips": "Fish And Chips",
   "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
