--- a/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
@@ -2,35 +2,35 @@
   "creativetab.veggiesdelight_tab": "Veggies Delight",
 
   "item.veggiesdelight.bellpepper": "パプリカ",
-  "item.veggiesdelight.broccoli": "???",
+  "item.veggiesdelight.broccoli": "Broccoli",
   "item.veggiesdelight.cauliflower": "カリフラワー",
   "item.veggiesdelight.dandelion_leaf": "タンポポの葉",
   "item.veggiesdelight.garlic": "にんにく",
   "item.veggiesdelight.sweet_potato": "さつまいも",
-  "item.veggiesdelight.turnip": "???",
-  "item.veggiesdelight.zucchini": "???",
+  "item.veggiesdelight.turnip": "Turnip",
+  "item.veggiesdelight.zucchini": "Zucchini",
 
   "item.veggiesdelight.bellpepper_seeds": "パプリカの種",
-  "item.veggiesdelight.broccoli_seeds": "???",
+  "item.veggiesdelight.broccoli_seeds": "Broccoli Seeds",
   "item.veggiesdelight.cauliflower_seeds": "カリフラワーの種",
-  "item.veggiesdelight.turnip_seeds": "???",
-  "item.veggiesdelight.zucchini_seeds": "???",
+  "item.veggiesdelight.turnip_seeds": "Turnip Seeds",
+  "item.veggiesdelight.zucchini_seeds": "Zucchini seeds",
 
   "block.veggiesdelight.bellpepper_crate": "パプリカ入り木箱",
-  "block.veggiesdelight.broccoli_crate": "???",
+  "block.veggiesdelight.broccoli_crate": "Broccoli Crate",
   "block.veggiesdelight.cauliflower_crate": "カリフラワー入り木箱",
   "block.veggiesdelight.garlic_crate": "にんにく入り木箱",
   "block.veggiesdelight.sweet_potato_crate": "さつまいも入り木箱",
-  "block.veggiesdelight.turnip_crate": "???",
-  "block.veggiesdelight.zucchini_crate": "???",
+  "block.veggiesdelight.turnip_crate": "Turnip Crate",
+  "block.veggiesdelight.zucchini_crate": "Zucchini Crate",
 
   "block.veggiesdelight.wild_bellpeppers": "野生のパプリカ",
-  "block.veggiesdelight.wild_broccoli": "???",
+  "block.veggiesdelight.wild_broccoli": "Wild Broccoli",
   "block.veggiesdelight.wild_cauliflowers": "野生のカリフラワー",
   "block.veggiesdelight.wild_garlic": "野生のにんにく",
   "block.veggiesdelight.wild_sweet_potatoes": "野生のさつまいも",
-  "block.veggiesdelight.wild_turnips": "???",
-  "block.veggiesdelight.wild_zucchinis": "???",
+  "block.veggiesdelight.wild_turnips": "Wild Turnips",
+  "block.veggiesdelight.wild_zucchinis": "Wild Zucchinis",
   "block.veggiesdelight.mature_dandelion": "成熟したタンポポ",
 
 
@@ -44,14 +44,14 @@
   "block.veggiesdelight.vegan_pizza": "ビーガンピザ",
   "item.veggiesdelight.vegan_pizza_slice": "一切れのビーガンピザ",
 
-  "item.veggiesdelight.broccoli_salad": "???",
-  "item.veggiesdelight.broccoli_soup": "???",
-  "item.veggiesdelight.pasta_with_broccoli": "???",
+  "item.veggiesdelight.broccoli_salad": "Broccoli Salad",
+  "item.veggiesdelight.broccoli_soup": "Broccoli Soup",
+  "item.veggiesdelight.pasta_with_broccoli": "Pasta With Broccoli",
 
   "item.veggiesdelight.cauliflower_bread": "カリフラワーブレッド",
   "item.veggiesdelight.cauliflower_burger": "カリフラワーバーガー",
   "item.veggiesdelight.cauliflower_floret": "カリフラワーの小房",
-  "item.veggiesdelight.cauliflower_kuku": "???",
+  "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
   "item.veggiesdelight.cauliflower_patty": "未調理のカリフラワーハンバーグ",
   "item.veggiesdelight.cauliflower_soup": "カリフラワースープ",
   "item.veggiesdelight.cooked_cauliflower_patty": "カリフラワーハンバーグ",
@@ -77,18 +77,18 @@
   "item.veggiesdelight.sweet_potato_cupcake": "さつまいものカップケーキ",
   "item.veggiesdelight.sweet_potato_dough": "サツマイモ生地",
   "item.veggiesdelight.sweet_potato_pancakes": "???",
-  "block.veggiesdelight.sweet_potato_pie": "???",
+  "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "一切れのさつまいもパイ",
 
-  "item.veggiesdelight.turnip_beef_stew": "???",
-  "item.veggiesdelight.turnip_cake": "???",
-  "item.veggiesdelight.turnip_salad": "???",
-  "item.veggiesdelight.turnip_water": "???",
+  "item.veggiesdelight.turnip_beef_stew": "Turnip Beef Stew",
+  "item.veggiesdelight.turnip_cake": "Turnip Cake",
+  "item.veggiesdelight.turnip_salad": "Turnip Salad",
+  "item.veggiesdelight.turnip_water": "Turnip Water",
 
-  "item.veggiesdelight.roasted_zucchini": "???",
-  "item.veggiesdelight.zucchini_sandwich": "???",
-  "item.veggiesdelight.zucchini_slice": "???",
-  "item.veggiesdelight.stuffed_zucchinis": "???",
+  "item.veggiesdelight.roasted_zucchini": "Roasted Zucchini",
+  "item.veggiesdelight.zucchini_sandwich": "Zucchini Sandwich",
+  "item.veggiesdelight.zucchini_slice": "Zucchini Slice",
+  "item.veggiesdelight.stuffed_zucchinis": "Stuffed Zucchinis",
 
   "item.veggiesdelight.beetroot_brownie": "ビーツブラウニー",
   "block.veggiesdelight.beetroot_brownie_tray": "ビーツブラウニーの型焼き",
@@ -114,8 +114,8 @@
   "veggiesdelight.advancement.vd_bellpepper_master": "Dr.ペッパー",
   "veggiesdelight.advancement.vd_bellpepper_master.desc": "パプリカを使った全ての料理を作る。",
 
-  "veggiesdelight.advancement.vd_broccoli_master": "???",
-  "veggiesdelight.advancement.vd_broccoli_master.desc": "???",
+  "veggiesdelight.advancement.vd_broccoli_master": "Broccoli Boss",
+  "veggiesdelight.advancement.vd_broccoli_master.desc": "Make every dish possible out of broccoli",
 
   "veggiesdelight.advancement.vd_cauliflower_master": "カリフラワーマスター",
   "veggiesdelight.advancement.vd_cauliflower_master.desc": "カリフラワーを使った全ての料理を作る。",
@@ -126,9 +126,9 @@
   "veggiesdelight.advancement.vd_sweet_potato_master": "勝利の味",
   "veggiesdelight.advancement.vd_sweet_potato_master.desc": "サツマイモを使った全ての料理を作る。",
 
-  "veggiesdelight.advancement.vd_turnip_master": "???",
-  "veggiesdelight.advancement.vd_turnip_master.desc": "???",
+  "veggiesdelight.advancement.vd_turnip_master": "Turnip the Beat",
+  "veggiesdelight.advancement.vd_turnip_master.desc": "Make every dish possible out of turnips",
 
-  "veggiesdelight.advancement.vd_zucchini_master": "???",
-  "veggiesdelight.advancement.vd_zucchini_master.desc": "???"
+  "veggiesdelight.advancement.vd_zucchini_master": "Zucchini Zenith",
+  "veggiesdelight.advancement.vd_zucchini_master.desc": "Make every dish possible out of zucchinis"
 }
