Rename fried_cauliflower_floret to roasted_ instead

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -55,7 +55,7 @@
   "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
   "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
-  "item.veggiesdelight.fried_cauliflower_floret": "Fried Cauliflower Floret",
+  "item.veggiesdelight.roasted_cauliflower_floret": "Roasted Cauliflower Floret",
 
   "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
   "item.veggiesdelight.dandelion_juice": "Dandelion Juice",
